# Axiom-Protocol

./: .gitignore  124M-SOVEREIGN-SUPPLY-UPGRADE.md  AXIOM-REBRANDING-GUIDE.md  BEFORE_AFTER_FIXES.md  BOOTSTRAP_DEPLOYMENT.md  CHANGELOG.md  CODE_REVIEW_DIAGNOSTICS.md  CROSS-CHAIN-IMPLEMENTATION.md  Cargo.toml  DEPLOYMENT_DELIVERABLES_INDEX.md  DISTRIBUTION.md  E0425_FIX_APPLIED.md  FINAL_DELIVERY_SUMMARY.md  FINAL_STATUS_REPORT.md  GITHUB-PUSH-COMPLETE.md  GITHUB-RELEASE-INSTRUCTIONS.md  IMPLEMENTATION-COMPLETE.md  INTEGRATION_STATUS.md  LAPTOP-SETUP.md  LICENSE  MAINNET_DEPLOYMENT_FIXES.md  MAINNET_INTEGRATION_GUIDE.md  MANIFEST.md  NETWORK-CONFIG.md  OPENCLAW_DEPLOYMENT.md  POW_SPECIFICATION.md  PRODUCTION_DEPLOYMENT_SUMMARY.md  PUBLISH-STATUS.md  PUBLISHING.md  QUICKSTART-BRIDGE.md  QUICK_REFERENCE_CHECKLIST.md  README.md  REBRANDING-COMPLETE.md  RELEASE-COMPLETE.md  RELEASE-NOTES-v2.0.0.md  RELEASE_NOTES_v3.1.0.md  RELEASE_NOTES_v3.2.0.md  ROADMAP.md  SECURITY.md  TECHNICAL_SPEC.md  (+10 more)
ai-oracle/src/: main.rs
axiom-ai-enhancement/: Cargo.toml  README.md
axiom-ai-enhancement/src/: anomaly_detector.rs  consensus_optimizer.rs  contract_auditor.rs  lib.rs
axiom-sdk/: Cargo.toml
axiom-sdk/src/: error.rs  lib.rs  wallet.rs  zk_pulse.rs
bridge-contracts/: .env.example  README.md  hardhat.config.js  package.json
bridge-contracts/contracts/: AxiomBridge.sol
bridge-contracts/scripts/: deploy.js
config/: bootstrap.toml  genesis_pulse.json
contracts/: AxiomLightClient.sol  AxiomStatelessBridge.sol  AxiomVerifier.sol
contrib/: axiom-guardian.service  axiom.logrotate  axiom.service
docs/: 124M-SOVEREIGN-SUPPLY-UPGRADE.md  ECONOMICS_TOKENOMICS.md  GENESIS_RECORD.md  SECURITY_MODEL.md  TESTS_TODO.md
docs/examples/: evidence_of_liveness.jsonl
docs/guides/: MINER_GUIDE.md
docs/historical/: genesis_to_launch.jsonl
docs/sustainability/: impact-analysis.md  sustainability-report.md
explorer-backend/src/: main.rs
explorer-frontend/src/: App.js
explorer-frontend/src/pages/: BlockDetail.js  TransactionDetail.js
methods/: Cargo.toml  build.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
monitoring/grafana/: axiom-dashboard.json
openclaw/: agent_internet.py  axiom_openclaw_config.json  bootstrap_server_config.json  ceremony_master.py  manager.py  network_booster_agent.py  node_health_monitor.py  security_guardian_agent.py
pow-mining/: README.md
pow-mining/src/: main.rs
scripts/: generate_zk_keys.sh  headless_archiver.rs  launch-mainnet.sh  retrain_model.py  verify_genesis.py
sdk/: README.md
sdk/javascript/: README.md  axiom-sdk.js
src/: ai_engine.rs  ai_logic.rs  block.rs  bridge.rs  chain.rs  circuit.rs  config.rs  economics.rs  genesis.rs  guardian_sentinel.rs  lib.rs  main.rs  main.rs.backup  main.rs.backup2  main_helper.rs  network.rs  network_config.rs  network_legacy.rs  neural_guardian.rs  openclaw_integration.rs  state.rs  storage.rs  time.rs  transaction.rs  vdf.rs  wallet.rs
src/ai/: mod.rs  oracle.rs
src/ai_core/: mod.rs  multi_layer_security.rs  multi_layer_security_fixed.rs  production_ml.rs
src/bridge/: cross_chain.rs  mod.rs
src/consensus/: lwma.rs  mod.rs  validator.rs  vdf.rs
src/guardian_enhancement/: ai_guardian_bridge_fixed.rs
src/metrics/: mod.rs
src/mobile/: mod.rs
src/network/: behaviour.rs  config.rs  discv5_service.rs  event_handler.rs  gossip_handler.rs  mod.rs  peer_manager.rs
src/privacy/: view_keys.rs
src/stark/: mod.rs  prover.rs
src/sustainability/: energy_benchmark.rs
src/validation/: ml_transaction_validator.rs  mod.rs
src/zk/: circuit.rs  mod.rs  transaction_circuit.rs
tests/: integration_test.rs  integration_tests.rs  security_tests.rs  stress_tests.rs  test_integration.rs
tools/: pulse-explorer.html
zk-setup/: README.md  ceremony.sh  download-keys.sh  verification_key.json
