[package]
name = "axiom-ai-enhancement"
version = "1.0.0"
edition = "2021"
authors = ["Axiom Protocol Contributors"]
license = "MIT"
description = "Production AI security and optimization for Axiom Protocol blockchain"
repository = "https://github.com/Ghost-84M/Axiom-Protocol"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
sha2 = "0.10"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[features]
default = []
async = ["tokio"]

[[bench]]
name = "anomaly_detection"
harness = false
path = "benches/anomaly_benchmark.rs"

[[bench]]
name = "contract_auditing"
harness = false
path = "benches/audit_benchmark.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
